corrected the style of the up-down arrows in the dropdown menu under low resolustions. on small screens these arrows were too small. made the block with relative position and increased the min width of the arrows.

--- a/style.css
+++ b/style.css
@@ -886,7 +886,17 @@ display: block;
 
 	}
 
+	.dropoutmenu__container__twinarrows {
+		position: relative;
+		top: 0;
+		left: 0;
+		min-width: 10%;
+		padding: 3%;
+	}
+
+
 }
+
 
 /*----------КОНЕЦ ИЗМЕНЕНИЕ ПАРАМЕТРОВ СТРАНИЦЫ И ЗАГОЛОВКА ПРИ ЭКРАНЕ ДО 768px-------------*/
 
